--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-dom": "^19.1.1",
     "react-redux": "^9.2.0",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.12"
+    "tailwindcss": "^4.1.12",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
